# dbt-magics

./: README.md  pyproject.toml
sandbox/: README.md  dbt_project.yml  jaffle_shop.ipynb  profiles.yml
src/dbt_magics/: __init__.py  dbt_magics.py
