[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dbt-magics"
version = "0.0.1"
description = "IPython magics to work with dbt"
readme = "README.md"
dependencies = ["pandas","copydf"]

[project.optional-dependencies]
dev = [
    "dbt-core==1.8.4",
    "dbt-duckdb==1.8.4",
    "duckdb"
]

[project.urls]
Homepage = "https://github.com/1210yuichi0/dbt-magics"
Issues = "https://github.com/1210yuichi0/dbt-magics/issues"

[tool.setuptools.packages.find]
where = ["src"]
